--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/.phpstorm.meta.php
+/_ide_helper*
+/.phpstorm.meta.php
+public/css/app.css.map
+public/js/app.js.map
+*-crlf
